# jules-mcp-server

./: .gitignore  Dockerfile  MCP.json  fastmcp.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
jules_mcp/: __init__.py  __main__.py  jules_mcp.py
tests/test_jules_mcp/: conftest.py  test_jules_mcp.py  test_mcp_server.py
